--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -56,11 +56,11 @@ workspace = true
 brush-core = { version = "^0.4.0", path = "../brush-core" }
 brush-builtins = { version = "^0.1.0", path = "../brush-builtins" }
 brush-experimental-builtins = { version = "^0.1.0", path = "../brush-experimental-builtins", optional = true }
-clap = { version = "4.5.51", features = ["derive", "env"] }
+clap = { version = "4.5.53", features = ["derive", "env"] }
 color-print = "0.3.7"
 const_format = "0.2.35"
 git-version = "0.3.9"
-serde_json = { version = "1.0.138", optional = true }
+serde_json = { version = "1.0.145", optional = true }
 tracing = "0.1.43"
 tracing-subscriber = "0.3.22"
 human-panic = "2.0.4"
@@ -89,7 +89,7 @@ brush-parser = { version = "^0.3.0", path = "../brush-parser" }
 assert_cmd = "2.1.1"
 assert_fs = "1.1.3"
 colored = "3.0.0"
-criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
+criterion = { version = "=0.5.1", features = ["async_tokio", "html_reports"] }
 descape = "3.0.0"
 diff = "0.1.13"
 expectrl = "0.8.0"
