--- a/brush-shell/tests/cases/builtins/shopt.yaml
+++ b/brush-shell/tests/cases/builtins/shopt.yaml
@@ -3,12 +3,14 @@ cases:
   - name: "shopt defaults"
     ignore_whitespace: true # Spacing changes across versions
     min_oracle_version: 5.3 # Options changed in bash 5.3
+    incompatible_configs: ["fedora"] # Fedora enables "syslog-history" option
     stdin: |
       shopt | sort | grep -v extglob
 
   - name: "shopt interactive defaults"
     ignore_whitespace: true # Spacing changes across versions
     min_oracle_version: 5.3 # Options changed in bash 5.3
+    incompatible_configs: ["fedora"] # Fedora enables "syslog-history" option
     pty: true
     args: ["-i", "-c", "shopt | sort | grep -v extglob"]
 
