--- a/brush-shell/tests/cases/options/set-e.yaml
+++ b/brush-shell/tests/cases/options/set-e.yaml
@@ -28,8 +28,7 @@ cases:
       false
       echo "after"
 
-  # Conditional contexts - set -e should NOT exit in test conditions
-  - name: "Error in if condition does not exit"
+  - name: "Error in if condition"
     stdin: |
       set -e
       if false; then
@@ -49,7 +48,7 @@ cases:
       fi
       echo "after"
 
-  - name: "Error in while condition does not exit"
+  - name: "Error in while condition"
     stdin: |
       set -e
       count=0
@@ -58,7 +57,7 @@ cases:
       done
       echo "after while"
 
-  - name: "Error in until condition does not exit"
+  - name: "Error in until condition"
     stdin: |
       set -e
       count=0
@@ -99,25 +98,25 @@ cases:
       echo "after while"
 
   # Boolean operators - set -e should NOT exit with && and ||
-  - name: "Error on right side of && does not exit"
+  - name: "Error on right side of &&"
     stdin: |
       set -e
       true && false
       echo "after &&"
 
-  - name: "Error on left side of && does not exit"
+  - name: "Error on left side of &&"
     stdin: |
       set -e
       false && true
       echo "after &&"
 
-  - name: "Error on right side of || does not exit"
+  - name: "Error on right side of ||"
     stdin: |
       set -e
       false || false
       echo "after ||"
 
-  - name: "Error on left side of || does not exit (success short-circuits)"
+  - name: "Error on left side of ||"
     stdin: |
       set -e
       true || false
@@ -136,20 +135,19 @@ cases:
       false || true && false || true
       echo "after complex expression"
 
-  # Negated commands - set -e should NOT exit
-  - name: "Negated command with failure does not exit"
+  - name: "Negated command with failure"
     stdin: |
       set -e
       ! false
       echo "after negation"
 
-  - name: "Negated command with success does not exit"
+  - name: "Negated command with success"
     stdin: |
       set -e
       ! true
       echo "after negation"
 
-  - name: "Error after negated command DOES exit"
+  - name: "Error after negated command"
     stdin: |
       set -e
       ! false
@@ -157,25 +155,81 @@ cases:
       echo "should not print"
 
   # Pipelines
-  - name: "Error in first command of pipeline exits (without pipefail)"
+  - name: "Error in first command of pipeline (without pipefail)"
     stdin: |
       set -e
       false | true
       echo "after pipeline"
 
-  - name: "Error in middle of pipeline does not exit (without pipefail)"
+  - name: "Error in first command of pipeline (without pipefail, negated)"
+    stdin: |
+      set -e
+      ! false | true
+      echo "after pipeline"
+
+  - name: "Error in first command of pipeline (with pipefail)"
+    known_failure: true # TODO(pipefail): implement pipefail semantics
+    stdin: |
+      set -e -o pipefail
+      false | true
+      echo "after pipeline"
+
+  - name: "Error in first command of pipeline (with pipefail, negated)"
+    stdin: |
+      set -e -o pipefail
+      ! false | true
+      echo "after pipeline"
+
+  - name: "Error in middle of pipeline (without pipefail)"
     stdin: |
       set -e
       true | false | true
       echo "after pipeline"
 
-  - name: "Error in last command of pipeline exits"
+  - name: "Error in middle of pipeline (without pipefail, negated)"
+    stdin: |
+      set -e
+      ! true | false | true
+      echo "after pipeline"
+
+  - name: "Error in middle of pipeline (with pipefail)"
+    known_failure: true # TODO(pipefail): implement pipefail semantics
+    stdin: |
+      set -e -o pipefail
+      true | false | true
+      echo "after pipeline"
+
+  - name: "Error in middle of pipeline (with pipefail, negated)"
+    stdin: |
+      set -e -o pipefail
+      ! true | false | true
+      echo "after pipeline"
+
+  - name: "Error in last command of pipeline (without pipefail)"
     stdin: |
       set -e
       true | false
       echo "after pipeline"
 
-  - name: "Pipeline in conditional does not exit"
+  - name: "Error in last command of pipeline (without pipefail, negated)"
+    stdin: |
+      set -e
+      ! true | false
+      echo "after pipeline"
+
+  - name: "Error in last command of pipeline (with pipefail)"
+    stdin: |
+      set -e -o pipefail
+      true | false
+      echo "after pipeline"
+
+  - name: "Error in last command of pipeline (with pipefail, negated)"
+    stdin: |
+      set -e -o pipefail
+      ! true | false
+      echo "after pipeline"
+
+  - name: "Pipeline in conditional"
     stdin: |
       set -e
       if true | false; then
@@ -185,7 +239,7 @@ cases:
       fi
       echo "after"
 
-  - name: "Negated pipeline does not exit"
+  - name: "Negated pipeline"
     stdin: |
       set -e
       ! false | false
@@ -203,7 +257,7 @@ cases:
       myfunc
       echo "should not print after function"
 
-  - name: "Function returning error in conditional does not exit"
+  - name: "Function returning error in conditional"
     stdin: |
       set -e
       myfunc() {
@@ -216,7 +270,7 @@ cases:
       fi
       echo "after"
 
-  - name: "Function called with && does not exit"
+  - name: "Function called with &&"
     stdin: |
       set -e
       myfunc() {
@@ -225,7 +279,7 @@ cases:
       true && myfunc
       echo "after"
 
-  - name: "Function called with || does not exit"
+  - name: "Function called with ||"
     stdin: |
       set -e
       myfunc() {
@@ -234,7 +288,7 @@ cases:
       false || myfunc
       echo "after"
 
-  - name: "Function called with negation does not exit"
+  - name: "Function called with negation"
     stdin: |
       set -e
       myfunc() {
@@ -285,7 +339,7 @@ cases:
       )
       echo "after subshell"
 
-  - name: "Subshell failure in conditional does not exit parent"
+  - name: "Subshell failure in conditional"
     stdin: |
       set -e
       if (false); then
@@ -295,27 +349,27 @@ cases:
       fi
       echo "after"
 
-  - name: "Subshell with && does not exit"
+  - name: "Subshell with &&"
     stdin: |
       set -e
       true && (false)
       echo "after"
 
   # Command substitution
-  - name: "Error in command substitution does not exit"
+  - name: "Error in command substitution"
     stdin: |
       set -e
       result=$(false)
       echo "after command substitution"
 
-  - name: "Error in command substitution with assignment does not exit"
+  - name: "Error in command substitution with assignment"
     stdin: |
       set -e
       var=$(false; echo "value")
       echo "var is: $var"
       echo "after"
 
-  - name: "Command substitution in conditional does not exit"
+  - name: "Command substitution in conditional"
     stdin: |
       set -e
       if [ "$(false; echo no)" = "no" ]; then
@@ -341,7 +395,7 @@ cases:
       false
       echo "should not print"
 
-  - name: "set +e in function does not affect parent scope"
+  - name: "set +e in function"
     stdin: |
       set -e
       myfunc() {
@@ -366,14 +420,14 @@ cases:
       (exit 42)
       echo "should not print"
 
-  - name: "Zero exit status does not trigger exit"
+  - name: "Zero exit status"
     stdin: |
       set -e
       (exit 0)
       echo "after exit 0"
 
   # Assignment with command substitution
-  - name: "Assignment from failing command does not exit"
+  - name: "Assignment from failing command"
     stdin: |
       set -e
       var=$(false) || true
@@ -424,7 +478,7 @@ cases:
       esac
       echo "after case"
 
-  - name: "case pattern matching does not exit on non-match"
+  - name: "case pattern matching on non-match"
     stdin: |
       set -e
       case "x" in
@@ -445,7 +499,7 @@ cases:
       echo "first" ; echo "second" ; false ; echo "should not print"
 
   # Background jobs
-  - name: "Error in background job does not exit parent"
+  - name: "Error in background job"
     stdin: |
       set -e
       false &
@@ -499,15 +553,15 @@ cases:
       [ 1 -eq 2 ]
       echo "should not print"
 
-  # errexit with trap
-  - name: "trap ERR does not prevent set -e exit"
+  - name: "trap ERR"
+    known_failure: true # TODO(traps): trap ERR support
     stdin: |
       set -e
       trap 'echo "error trapped"' ERR
       false
       echo "should not print"
 
-  - name: "trap EXIT runs even with set -e"
+  - name: "trap EXIT"
     stdin: |
       set -e
       trap 'echo "exit trapped"' EXIT
@@ -515,7 +569,7 @@ cases:
       echo "should not print"
 
   # Combination of contexts
-  - name: "Error in function in conditional does not exit"
+  - name: "Error in function in conditional"
     stdin: |
       set -e
       myfunc() {
@@ -528,7 +582,7 @@ cases:
       fi
       echo "after"
 
-  - name: "Negated function call does not exit"
+  - name: "Negated function call"
     stdin: |
       set -e
       myfunc() {
@@ -538,7 +592,7 @@ cases:
       ! myfunc
       echo "after"
 
-  - name: "Function in pipeline does not exit on internal error"
+  - name: "Function in pipeline on internal error"
     stdin: |
       set -e
       myfunc() {
