--- a/brush-shell/tests/cases/options/set-e.yaml
+++ b/brush-shell/tests/cases/options/set-e.yaml
@@ -24,6 +24,12 @@ cases:
       false
       echo "Text after call"
 
+  - name: "Command line -e"
+    args: ["-e"]
+    stdin: |
+      false
+      echo "should not print"
+
   - name: "Multiple commands before error"
     stdin: |
       set -e
