--- a/brush-interactive/Cargo.toml
+++ b/brush-interactive/Cargo.toml
@@ -35,3 +35,6 @@ reedline = { version = "0.44.0", optional = true }
 thiserror = "2.0.17"
 tokio = { version = "1.48.0", features = ["rt", "sync"] }
 tracing = "0.1.43"
+
+[dev-dependencies]
+pretty_assertions = { version = "1.4.1", features = ["unstable"] }
