--- a/brush-shell/tests/cases/builtins/bind.yaml
+++ b/brush-shell/tests/cases/builtins/bind.yaml
@@ -84,7 +84,7 @@ cases:
           bind -q ${well_known_func}
           echo "bind -q result: $?"
 
-  - name: "bind macro"
+  - name: "bind macro 1"
     args: ["run.sh"]
     removed_default_args: ["--input-backend=basic"]
     additional_test_args: ["--input-backend=reedline"]
@@ -111,3 +111,31 @@ cases:
           bind "[bind -s]"
           bind -s
           echo "bind -s result: $?"
+
+          bind "[bind -r]"
+          bind -r '\C-r'
+          echo "bind -r result: $?"
+
+          bind "[bind -s (after -r)]"
+          bind -s
+          echo "bind -s (after -r) result: $?"
+
+          echo "[bind -S (after -r)]"
+          bind -S
+          echo "bind -S (after -r) result: $?"
+
+  - name: "bind macro 2"
+    args: ["run.sh"]
+    removed_default_args: ["--input-backend=basic"]
+    additional_test_args: ["--input-backend=reedline"]
+    ignore_stderr: true
+    test_files:
+      - path: "run.sh"
+        contents: |
+          echo "[bind macro]"
+          bind '"\ec": " \C-b\C-k`something`\e\C-e"'
+          echo "bind macro result: $?"
+
+          bind "[bind -S]"
+          bind -S
+          echo "bind -S result: $?"
