--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -48,6 +48,7 @@ reedline = ["brush-interactive/reedline"]
 experimental = ["experimental-builtins", "experimental-load"]
 experimental-builtins = ["dep:brush-experimental-builtins"]
 experimental-load = ["dep:serde_json", "brush-core/serde"]
+schema = ["dep:schemars"]
 
 [lints]
 workspace = true
@@ -58,6 +59,10 @@ brush-builtins = { version = "^0.1.0", path = "../brush-builtins" }
 brush-experimental-builtins = { version = "^0.1.0", path = "../brush-experimental-builtins", optional = true }
 clap = { version = "4.5.53", features = ["derive", "env"] }
 color-print = "0.3.7"
+etcetera = "0.10"
+schemars = { version = "0.8", optional = true }
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
 const_format = "0.2.35"
 git-version = "0.3.9"
 serde_json = { version = "1.0.148", optional = true }
