--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -388,12 +388,12 @@ jobs:
 
       - name: Regenerate schemas
         run: |
-          cargo run --package xtask -- schema config --out schemas/brush-config.schema.json
+          cargo run --package xtask -- schema config --out schemas/config.schema.json
 
       - name: Check for schema drift
         run: |
           if ! git diff --exit-code schemas/; then
-            echo "::error::Generated schemas are out of date. Please run 'cargo xtask schema config --out schemas/brush-config.schema.json' and commit the changes."
+            echo "::error::Generated schemas are out of date. Please run 'cargo xtask schema config --out schemas/config.schema.json' and commit the changes."
             exit 1
           fi
 
