--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -59,10 +59,10 @@ brush-builtins = { version = "^0.1.0", path = "../brush-builtins" }
 brush-experimental-builtins = { version = "^0.1.0", path = "../brush-experimental-builtins", optional = true }
 clap = { version = "4.5.53", features = ["derive", "env"] }
 color-print = "0.3.7"
-etcetera = "0.10"
-schemars = { version = "0.8", optional = true }
+etcetera = "0.11.0"
+schemars = { version = "1.2.0", optional = true }
 serde = { version = "1.0", features = ["derive"] }
-toml = "0.8"
+toml = "0.9.10"
 const_format = "0.2.35"
 git-version = "0.3.9"
 serde_json = { version = "1.0.148", optional = true }
@@ -90,6 +90,7 @@ uuid = { version = "1.19.0", features = ["js"] }
 
 [dev-dependencies]
 anyhow = "1.0.100"
+tempfile = "3.24.0"
 brush-parser = { version = "^0.3.0", path = "../brush-parser" }
 assert_cmd = "2.1.1"
 assert_fs = "1.1.3"
