--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -60,10 +60,10 @@ clap = { version = "4.5.53", features = ["derive", "env"] }
 color-print = "0.3.7"
 const_format = "0.2.35"
 git-version = "0.3.9"
-serde_json = { version = "1.0.145", optional = true }
+serde_json = { version = "1.0.148", optional = true }
 tracing = "0.1.44"
 tracing-subscriber = "0.3.22"
-human-panic = "2.0.4"
+human-panic = "2.0.5"
 
 [target.'cfg(not(any(unix, windows)))'.dependencies]
 brush-interactive = { version = "^0.3.0", path = "../brush-interactive", features = [
@@ -89,7 +89,7 @@ brush-parser = { version = "^0.3.0", path = "../brush-parser" }
 assert_cmd = "2.1.1"
 assert_fs = "1.1.3"
 colored = "3.0.0"
-criterion = { version = "=0.5.1", features = ["async_tokio", "html_reports"] }
+criterion = { version = "0.8.1", features = ["async_tokio", "html_reports"] }
 descape = "3.0.0"
 diff = "0.1.13"
 expectrl = "0.8.0"
